2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Use the common size routine in hostfs so we can read disks as well.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_sectors): Rename to ..
	(grub_util_get_fd_size): ... this. Return size in bytes.
	All users updated.
	* grub-core/kern/emu/hostfs.c (grub_hostfs_open): Use
	grub_util_get_fd_size.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_sectors) [__APPLE__]:
	Add blocksize retrieval.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Restore CFLAGS after efiemu check.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Move -fnested-functions to CPPFLAGS to workaround
	Apple bug.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am (MACHO2IMG): Add missing variable.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/halt.c (grub_halt): Add noreturn attribute.
	(grub_cmd_halt): Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/relocator16.S: Declare LOCAL(relocator16_end)
	for local arithmetics.
	Break %sp init into 2 instructions.
	Add 0 byte at the end.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (read_segment): Initialise err
	before loops.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/xzembed/xz_dec_stream.c (hash_validate): Use void *
	for context.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ldm.c (make_vg): Init part.name.
	(grub_ldm_detect): Silence spurious warning.
	(grub_util_is_ldm): Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Init fsbfreq to
	sane value to avoid a spurious warning.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/dl.h: Switch from APPLE_CC to __APPLE__.