@@ -1,5 +1,11 @@
 2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/boot/i386/pc/diskboot.S (firstlist): Rename to ...
+	(LOCAL(firstlist)): ... this. Move it before the firstlist and not
+	after. All users updated.
+
+2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Use the common size routine in hostfs so we can read disks as well.
 
 	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_sectors): Rename to ..
